# gigasecond

./: .gitignore  README.md  pyproject.toml
src/billion_seconds/: __init__.py  core.py
src/gigasecond/: app.py  cli.py  utils.py
src/gigasecond/ui/: textual_app.py
